# zero2prod

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  aws.Dockerfile  configuration.toml
.github/workflows/: code-coverage.yaml  general.yaml  general.yml
.sqlx/: query-66fc3537375df38eb21398e5f2c4976fde2bdd62a13a9a5da076802d0458fa54.json  query-88ec237aba5edd34782fb0c8e5197ce9905a09cf0ccf0a000553dee84518cc5d.json  query-8ad6c1da5f9b1708a6dd5461fd0e2a90eace325b2ffd9b0c9b9e80672512f7f1.json  query-95cfd70a25f1df1acb3c6e6d02a3f22fe7fa4687be6909f111b7a1e8ce30be96.json  query-b879190d3efcc0cdca951fa5ea49a7d31534cc4dccfc94e037aa9da1997357b1.json
aws_infra/: .prettierrc  buildspec.yaml  cdk.json  package-lock.json  package.json  pnpm-lock.yaml
aws_infra/config/: dev.ts  helper.ts  type.ts
aws_infra/lib/: alb-stack.ts  code-build-stack.ts  code-deploy-stack.ts  code-pipeline-stack.ts  code-source-stack.ts  code-star-stack.ts  codedeploy-stack.ts  ecr-stack.ts  ecs-stack.ts  pipeline-stack.ts  rds-stack.ts  sg-stack.ts  vpc-stack.ts  zero_2_prod-stack.ts
aws_infra/template/: appspec.yaml  taskdef.json
aws_infra/test/: aws_infra.test.ts
configuration/: base.toml  local.toml  production.toml
infra/: .prettierrc  .terraform.lock.hcl  README.md  buildspec.yaml  codebuild.tf  codedeploy.tf  codepipeline.tf  codestar.tf  ecr.tf  ecs.tf  lb.tf  main.tf  outputs.tf  package.json  pgdb.tf  pnpm-lock.yaml  ssm.tf  terraform.tf  variables.tf  vpc.tf
infra/config/: dev.ts  helper.ts
infra/lib/: alb-stack.ts  code-pipeline-stack.ts  ecr-stack.ts  ecs-stack.ts  rds-stack.ts  sg-stack.ts  vpc-stack.ts
infra/template/: taskdef.json
infra/test/: aws_infra.test.ts
migrations/: 20240916184242_create_app_schema.sql  20240916184259_create_subscriptions_table.sql  20240917131545_make_status_not_null_in_subscriptions.sql  20240917160035_create_subscription_tokens_table.sql
scripts/: generate_appspec.sh  generate_from_template.sh  init_db.sh
src/: bootstrap.rs  configuration.rs  domain.rs  email_client.rs  environment.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: email.rs  mod.rs  subscriber_email.rs  subscriber_name.rs
src/email/: aws_email_client.rs  email_client.rs  mod.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: aws_ses_rules.rs  health_check.rs  main.rs  mocks.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
