[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = { version = "0.14.0", features = ["toml"], default-features = false }
log = "0.4.21"
once_cell = "1.19.0"
reqwest = "0.12.4"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
