[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
anyhow = "1.0.89"
async-trait = "0.1.80"
aws-config = "1.5.8"
aws-sdk-sesv2 = { version = "1.33.0", features = ["test-util"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = { version = "0.14.0", features = ["toml"], default-features = false }
dotenvy = "0.15.7"
http = "1.1.0"
log = "0.4.21"
once_cell = "1.20.1"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde-aux = "4"
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.8.0", features = ["v4"] }
validator = "0.18.0"

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
aws-smithy-mocks-experimental = "0.2.1"
aws-smithy-runtime-api = "1.7.2"
claims = "0.7.1"
fake = "2.9.2"
linkify = "0.10.0"
mockall = "0.13.0"
proptest = "1.4.0"
